--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+    <a href="/"><div class="backBtn dark sitLeft"></div></a>
     <div ng-view></div>
 
     <!-- build:js(src) scripts/vendor.js -->
